<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_shell_proxy_dialog"
    android:orientation="vertical"
    android:paddingStart="@dimen/spacing_20"
    android:paddingTop="@dimen/spacing_md"
    android:paddingEnd="@dimen/spacing_20"
    android:paddingBottom="@dimen/spacing_12">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_site_health_sort"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.WebTV.Display"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/spacing_12"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_md"
            android:layout_weight="1"
            android:text="@string/setting_site_health_enable"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.WebTV.Title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/healthSort"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:minHeight="36dp"
            android:minWidth="84dp"
            android:nextFocusDown="@id/dialogSort"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/setting_enable"
            android:textColor="@color/dialog_tonal_button_text"
            app:backgroundTint="@color/dialog_tonal_button_bg" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_md"
            android:layout_weight="1"
            android:text="@string/setting_site_health_dialog_sort"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.WebTV.Title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialogSort"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:minHeight="36dp"
            android:minWidth="84dp"
            android:nextFocusDown="@id/negative"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/setting_disable"
            android:textColor="@color/dialog_tonal_button_text"
            app:backgroundTint="@color/dialog_tonal_button_bg" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_12"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/negative"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:minHeight="40dp"
            android:minWidth="0dp"
            android:text="@string/dialog_negative"
            android:textColor="@color/dialog_outlined_button_text"
            app:backgroundTint="@color/dialog_outlined_button_bg"
            app:strokeColor="@color/dialog_outlined_button_stroke" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positive"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/spacing_sm"
            android:layout_weight="1"
            android:minHeight="40dp"
            android:minWidth="0dp"
            android:text="@string/dialog_positive"
            android:textColor="@color/dialog_primary_button_text"
            app:backgroundTint="@color/dialog_primary_button_bg" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
